@@ -1,3 +1,11 @@
+2007-12-29  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_context.c (cr_set_source_surface): fixed wrong type
+	conversion.
+	Reported by Binzo. Thanks!!!
+
+	* README: updated Binzo entry in Thanks list.
+
 2007-12-28  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_context.c (cr_pop_group): fixed a memory leak bug.
